chore: prepare 1.0.0 release for npm publish
- Add prepublishOnly script for cross-platform addon copy

- Add npm package metadata (repository, bugs, homepage, keywords)

- Read version from package.json instead of hardcoding in cli.ts

- Update docs with npm install instructions

- Add server/addons/ to gitignore (created on publish)

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ mono_crash.*.json
 node_modules/
 npm-debug.log
 dist/
+server/addons/
 
 # System files
 .DS_Store
@@ -44,6 +45,7 @@ __pycache__/
 
 .vscode/
 TRASH.md
+UPDATE.md
 CLAUDE.md
 AGENTS.md
 examples/
