fix: pin @modelcontextprotocol/sdk to 1.6.0 to fix CLI compatibility

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "godot-mcp-cli",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "CLI and MCP server for AI assistants to interact with Godot Engine",
   "type": "module",
   "main": "dist/index.js",
@@ -41,7 +41,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "fastmcp": "^1.20.4",
+    "@modelcontextprotocol/sdk": "1.6.0",
+    "fastmcp": "1.20.4",
     "websocket": "^1.0.35",
     "ws": "^8.13.0",
     "zod": "^3.21.4"
@@ -51,5 +52,8 @@
     "@types/ws": "^8.5.5",
     "nodemon": "^3.1.9",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "@modelcontextprotocol/sdk": "1.6.0"
   }
 }
